cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 17)
FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
add_executable (OCServer Entry.cpp Server.cpp Server.h WeakCallback.h Destructible.h json.hpp Item.h Item.cpp Actions.h Actions.cpp)

IF (WIN32)
  add_definitions(-DBOOST_ALL_NO_LIB)
  add_definitions(-D_WIN32_WINNT=0x0601)
  target_link_libraries(OCServer ws2_32 mswsock)
ELSE ()
  set(THREADS_PREFER_PTHREAD_FLAG ON)
  find_package(Threads)
  target_link_libraries(OCServer Threads::Threads)
ENDIF ()
