[package]
name = "oc-remote"
version = "0.1.0"
authors = ["Yibo Cao <cyb@ieee.org>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "time", "signal", "macros", "io-util"] }
ordered-float = "2"
num-traits = "0"
socket2 = "0"
fnv = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
