[package]
name = "oc-remote"
version = "0.1.0"
authors = ["Yibo Cao <cyb@ieee.org>"]
edition = "2021"

[features]
dump_traffic = []

[dependencies]
tokio = { version = "1", features = ["rt", "net", "time", "macros", "sync", "io-util"] }
abort-on-drop = "0"
ordered-float = "2"
futures-util = "0"
num-traits = "0"
socket2 = "0"
flexstr = "0"
fnv = "1"
ratatui = "0.27.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tui-textarea = "0.4.0"
regex = "1.10.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
